src/examples/test-doubles/ThrowExceptionExampleTest.php.out
./tools/phpunit tests/ThrowExceptionExampleTest.php
PHPUnit 11.4.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.12

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.08 MB

There was 1 error:

1) ThrowExceptionExampleTest::testThrowExceptionStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ThrowExceptionExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
